--- a/package.json
+++ b/package.json
@@ -9,13 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.5",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "npm": "^10.2.4",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.11.3",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.2",
+    "react-navigation-header-buttons": "^11.1.1",
+    "react-redux": "^9.0.2",
+    "redux": "^5.0.0",
+    "start": "^5.1.0",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.5",
+    "@babel/preset-react": "^7.23.3"
   },
   "private": true
 }
